modify booking row view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RoomSeller">
-        <activity
-            android:name=".BookingDetail"
-            android:exported="false" />
+
         <activity
             android:name=".BookingList"
             android:exported="false" />
@@ -23,6 +21,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".BookingDetail"
+            android:parentActivityName=".BookingList"
+            android:label="Details"
+            android:exported="false" />
+
     </application>
 
 </manifest>
