--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         <activity
             android:name=".BookingDetail"
             android:exported="false"
-            android:label="Details"
+            android:label="Booking Details"
             android:parentActivityName=".BookingList">
             <intent-filter>
                 <action android:name=".BookingDetail" />
